2006-04-17  Brian Warner  <warner@lothar.com>

	* contrib/svnpoller.py: added script by John Pye to poll a remote
	SVN repository (by running 'svn log') from a cronjob, and run
	'buildbot sendchange' to deliver the changes to a remote
	buildmaster.
	* contrib/svn_watcher.py: added script by Niklaus Giger (a
	modification of svnpoller.py), same purpose, but this one loops
	internally (rather than expecting to run from a cronjob) and works
	under windows.
	* contrib/README.txt: same

2006-04-11  Brian Warner  <warner@lothar.com>

	* all: fix a number of incorrect names and missing imports, thanks
	to Anthony Baxter for the patch.
	* buildbot/status/html.py (WaterfallStatusResource.statusToHTML): 
	remove unused buggy method.
	* buildbot/status/builder.py (BuildStatus.saveYourself): rmtree
	comes from shutil, not "shutils"
	* buildbot/process/step.py (TreeSize.evaluateCommand): fix bad name
	(Arch.checkSlaveVersion): same
	* buildbot/process/step_twisted.py (Trial.commandComplete): same, in
	some disabled code
	* buildbot/process/step_twisted2.py: add some missing imports
	* buildbot/twcompat.py (_deferGenerator): fix cut-and-paste error,
	this code used to live in twisted.internet.defer

2006-04-10  Brian Warner  <warner@lothar.com>

	* buildbot/process/step.py (Mercurial): add Mercurial support
	* buildbot/slave/commands.py (Mercurial): same
	* buildbot/scripts/tryclient.py (MercurialExtractor): same
	* buildbot/test/test_vc.py (Mercurial): same, checkout over HTTP is
	not yet tested, but 'try' support *is* covered
	* docs/buildbot.texinfo (Mercurial): document it

	* buildbot/process/step.py (LoggedRemoteCommand.remoteUpdate): add
	some debugging messages (turned off)
	* buildbot/test/test_vc.py: improve debug messages

2006-04-07  Brian Warner  <warner@lothar.com>

	* buildbot/test/test_vc.py (which): define our own which() in case
	we can't import twisted.python.procutils, because procutils doesn't
	exist in Twisted-1.3
